[레거시 코드 리팩터링 - 2단계] 비버(전인표) 미션 제출합니다. (#605)
* feat: MenuGroup dto 생성 및 setter 제거

* refactor: MenuGroupDao ->  MenuGroupRepository 변경

* refactor: Repository변경의 따른 MenuGroupService 변경

* refactor: dao 삭제

* refactor: Mock Test 제거

* refactor: Dao 제거

* refactor: repository 변경의 따른 MenuService 재정의

* refactor: repository 변경의 따른 OrderService 재정의

* refactor: repository 변경의 따른 ProductService 재정의

* refactor: repository 변경의 따른 TableGroupService 재정의

* refactor: repository 변경의 따른 TableService 재정의

* test: Menu 단위테스트 추가

* test: OrderStatus 단위테스트 추가

* test: OrderTable 단위테스트 추가

* test: Product 단위테스트 추가

* test: id 추출 로직 dto내부로 변경

* refactor: 사용하지 않는 판별 메소드 제거 및 메서드 내부 로직 순서 변경

* refactor: Menu생성자를 활용하여 null인 상태 로직 개선 및 사용하지 않는 getter 제거

* refactor: MenuProducts 추가 및 검증 메소드 이동

* refactor: 메소드 순서 변경

* refactor: findAllProducts 메서드 분리

* refactor: id 추출 메소드 dto로 이동

* refactor: 주문 상태 확인 로직 메서드 분리

* refactor: 페키지 네이밍 변경

* refactor: service 변경의 따른 test변경

* refactor: service 변경의 따른 test변경

* refactor: MenuProducts의 대한 테스트 작성

* refactor: cascade = REMOVE 제거

* refactor: 컨벤션 적용

* refactor: id추출을 dto 내부 로직으로 변경

* refactor: 메서드 이름과 다른 값을 받환하는 메서드 네이밍 변경

* refactor: id추출을 dto 내부 로직으로 변경

* refactor: order를 생성하는 정적팩토리메소드 변경

* refactor: 판별 로직 도메인으로 이동

* refactor: String 형식이 아닌 enum으로 응답받도록 dto 정의

* refactor: 메서드 로직에 맞도록 네이밍 수정

* refactor: import정렬

* refactor: 실행되지 않는 테스트 수정

* refactor: 컨벤션 적용